--- a/INFO201Final.Rmd
+++ b/INFO201Final.Rmd
@@ -23,15 +23,15 @@ gdp_global_education <- left_join(gdp, global_education, by = c("Country.Territo
 ls(gdp_global_education)
 ```
 
-## Find the completion rate in males and females
+## If we need it: Find the completion rate in males and females
 ```{r}
-completionRate <- subset(gdp_global_education, select =c("Country.Territory", "Completion_Rate_Primary_Male", "Completion_Rate_Primary_Female", "OOSR_Primary_Age_Male","OOSR_Primary_Age_Female"))
+completionRate <- subset(gdp_global_education, select =c("Country.Territory", "Completion_Rate_Primary_Male", "Completion_Rate_Primary_Female"))
 
 completionRate <- na.omit(completionRate)
 ```
 
 
-## Find the youth 15-24 literacy rate in males and females 
+## If we need it: Find the youth 15-24 literacy rate in males and females 
 ```{r}
 youthLiteracyRate <- subset(gdp_global_education, select =c("Country.Territory", "Youth_15_24_Literacy_Rate_Female", "Youth_15_24_Literacy_Rate_Male"))
 
@@ -39,14 +39,14 @@ youthLiteracyRate <- na.omit(completionRate)
 ```
 
 
-## Find gross primary enrollment in education 
+## If we need it: Find gross primary enrollment in education 
 ```{r}
 grossPrimaryEnrollment <- subset(gdp_global_education, select =c("Country.Territory", "Gross_Primary_Education_Enrollment"))
 
 grossPrimaryEnrollment <- na.omit(grossPrimaryEnrollment)
 ```
 
-## Find unemployment rates
+## If we need it: Find unemployment rates
 ```{r}
 unemploymentRates <- subset(gdp_global_education, select =c("Country.Territory", "Unemployment_Rate"))
 
@@ -55,7 +55,7 @@ unemploymentRates <- na.omit(unemploymentRates)
 
 ## MERGED DATASET WITH ALL VARIABLES WE NEED
 ```{r}
-FINALgdp_global_education <- subset(gdp_global_education, select =c("Country.Territory", "IMF", "Completion_Rate_Primary_Male", "Completion_Rate_Primary_Female", "Youth_15_24_Literacy_Rate_Female", "Youth_15_24_Literacy_Rate_Male", "Gross_Primary_Education_Enrollment", "Unemployment_Rate", "OOSR_Primary_Age_Male", "OOSR_Primary_Age_Female"  ))
+FINALgdp_global_education <- subset(gdp_global_education, select =c("Country.Territory", "IMF", "Completion_Rate_Primary_Male", "Completion_Rate_Primary_Female", "Unemployment_Rate", "OOSR_Primary_Age_Male", "OOSR_Primary_Age_Female"))
 
 ## gets rid of na values
 FINALgdp_global_education <- na.omit(FINALgdp_global_education)
@@ -64,7 +64,7 @@ FINALgdp_global_education <- na.omit(FINALgdp_global_education)
 FINALgdp_global_education <- FINALgdp_global_education[FINALgdp_global_education$IMF != 0, ]
 ```
 
-##changing IMF to be numerical, not character
+
 ### IMF = GDP per capita estimated by the International Monetary Fund
 ```{r}
 FINALgdp_global_education$IMF <- as.numeric(FINALgdp_global_education$IMF)
@@ -72,12 +72,13 @@ FINALgdp_global_education$IMF <- as.numeric(FINALgdp_global_education$IMF)
 min_value <- min(FINALgdp_global_education$IMF)
 max_value <- max(FINALgdp_global_education$IMF)
 
+## to see min and max
 print(paste("Minimum value:", min_value))
 print(paste("Maximum value:", max_value))
 ```
 
-## Adding a categorical variable to the dataset: make different income classes, and sort each country into its own bin.
 
+## Adding a categorical variable to the dataset: make different income classes, and sort each country into its own bin.
 ```{r}
 FINALgdp_global_education <- mutate(FINALgdp_global_education,
                        Rank_of_GDP_per_Capita = case_when(
@@ -95,37 +96,15 @@ print(rank_counts)
 
 ```
 
-## Adding a numerical variable: This calculates an education index by taking the average of completion rates for both male and female, the average of literacy rates for both genders, and adds the gross primary education enrollment. Finally, it normalizes the index between 0 and 1 to make it more interpretable and comparable across different scales.
-
-```{r}
-# Assuming your dataset is named 'education_data'
-FINALgdp_global_education$Education_Index <- (
-    (FINALgdp_global_education$Completion_Rate_Primary_Male + FINALgdp_global_education$Completion_Rate_Primary_Female) / 2 +
-    (FINALgdp_global_education$Youth_15_24_Literacy_Rate_Female + FINALgdp_global_education$Youth_15_24_Literacy_Rate_Male) / 2 +
-    FINALgdp_global_education$Gross_Primary_Education_Enrollment
-) / 3
-
-# Normalize the index between 0 and 1
-FINALgdp_global_education$Education_Index <- (FINALgdp_global_education$Education_Index - min(FINALgdp_global_education$Education_Index)) /
-                                  (max(FINALgdp_global_education$Education_Index) - min(FINALgdp_global_education$Education_Index))
-```
-
 ### FINAL DATASET
 ```{r}
-FINALgdp_global_education
+ls(FINALgdp_global_education)
 ```
-
-## EDIT LATER Make scatterplot of education index in correlation to GDP (gdp on x axis up to 130k, education index on y axis 0-1)
 
 
 ## plot each gdp bin with its corresponding completion rate for primaryrate(female)
 ```{r}
-# Load necessary libraries
-# Load necessary libraries
 library(ggplot2)
-
-# Assuming FINALgdp_global_education is your dataset
-# Replace 'Completion_Rate_Primary_Female' and 'Rank_of_GDP_per_Capita' with your actual column names
 
 # Filter out rows where Completion_Rate_Primary_Female is not equal to 0
 filtered_data <- FINALgdp_global_education %>%
@@ -145,8 +124,6 @@ ggplot(filtered_data, aes(x = Rank_of_GDP_per_Capita, y = Completion_Rate_Primar
 
 ## plot each gdp bin with its corresponding completion rate for primaryrate(male) 
 ```{r}
-# Load necessary libraries
-# Load necessary libraries
 library(ggplot2)
 
 # Filter out rows where Completion_Rate_Primary_Female is not equal to 0
@@ -166,14 +143,7 @@ ggplot(filtered_data, aes(x = Rank_of_GDP_per_Capita, y = Completion_Rate_Primar
 
 ## plot GDP and Unemployment rate 
 ```{r}
-# Assuming FINALgdp_global_education is your dataset
-# Replace 'IMF' and 'Unemployment_Rate' with your actual column names
-
-# Create a bar plot for Unemployment_Rate vs. IMF starting x-axis at 500
 library(dplyr)
-
-# Assuming FINALgdp_global_education is your dataset
-# Replace 'IMF' and 'Unemployment_Rate' with your actual column names
 
 # Filter out rows where IMF or Unemployment_Rate is 0
 filtered_data <- FINALgdp_global_education %>%
@@ -187,25 +157,21 @@ ggplot(filtered_data, aes(x = IMF, y = Unemployment_Rate)) +
        y = "Unemployment Rate") +
   theme_minimal() +
   xlim(5000, max(filtered_data$IMF))  # Setting x-axis limits from 500 to maximum IMF value in filtered data
-
-
 ```
+
 
 ## GDP vs OOSR_Primary_Age_Male
 ```{r}
 library(ggplot2)
 library(dplyr)
-    
-# Assuming FINALgdp_global_education is your dataset
-# Use your actual dataframe name if it's different
 
 filtered_data <- FINALgdp_global_education %>%
   filter(OOSR_Primary_Age_Male != 0)
 
 ggplot(filtered_data, aes(x = IMF, y = OOSR_Primary_Age_Male)) +
   geom_point() +
-  labs(x = "IMF", y = "OOSR Primary Age Female",
-       title = "IMF vs OOSR Primary Age Female Scatter Plot")
+  labs(x = "IMF", y = "OOSR Primary Age Male",
+       title = "IMF vs OOSR Primary Age Male Scatter Plot")
 
 ```
 
@@ -214,9 +180,6 @@ ggplot(filtered_data, aes(x = IMF, y = OOSR_Primary_Age_Male)) +
 ```{r}
 library(ggplot2)
 library(dplyr)
-    
-# Assuming FINALgdp_global_education is your dataset
-# Use your actual dataframe name if it's different
 
 filtered_data <- FINALgdp_global_education %>%
   filter(OOSR_Primary_Age_Female != 0)
@@ -226,4 +189,26 @@ ggplot(filtered_data, aes(x = IMF, y = OOSR_Primary_Age_Female)) +
   labs(x = "IMF", y = "OOSR Primary Age Female",
        title = "IMF vs OOSR Primary Age Female Scatter Plot")
 
+```
+
+## new numerical variable: the absolute value of the completion rate of males vs females, so it just shows the difference of males that complete school vs feamles. It shows that in countries w lower GDPs, women have a bigger education gap than men.
+
+```{r}
+library(dplyr)
+
+FINALgdp_global_education <- FINALgdp_global_education %>%
+  mutate(Education_Gap = abs(Completion_Rate_Primary_Male - Completion_Rate_Primary_Female))
+
+## just to see
+ls(FINALgdp_global_education)
+
+## plotting gdp vs educational gap
+filtered_data <- FINALgdp_global_education %>%
+  filter(!is.na(IMF) & IMF != 0 & !is.na(Education_Gap) & Education_Gap != 0)
+
+# Plotting the scatterplot with filtered data
+ggplot(filtered_data, aes(x = IMF, y = Education_Gap)) +
+  geom_point() + 
+  labs(x = "IMF", y = "Education Gap") +
+  ggtitle("Scatterplot of IMF vs. Education Gap (Filtered)")
 ```
