--- a/info201FINALWRITEUP.Rmd
+++ b/info201FINALWRITEUP.Rmd
@@ -124,46 +124,43 @@ date: "2023-12-07"
 
 #### The boxplots depicting male and female completion rates across the different GDP per capita ranks (low, mid, high) revealed similar patterns. For both, countries with lower GDP per capita tend to have a broader distribution in completion rates, indicating higher variability. The median completion rate was lower for countries with lower GDP per capita. Additionally, there was a presence of more outliers in high GDP countries, exhibited in both the female and male graphs.
 
-```{r, echo=FALSE}
-knitr::include_graphics("gdp_comp_rate_female.png")
-knitr::include_graphics("gdp_comp_rate_male.png")
-```
+![](graphs/gdp_comp_rate_female.png)   
+   
+![](graphs/gdp_comp_rate_male.png) 
 
 <br>
 
+***  
 #### The scatterplot visualizing the relationship between GDP per capita and the unemployment gap showed that in countries with lower GDPs, the unemployment gap tends to be larger. 
 
-```{r, echo=FALSE}
-knitr::include_graphics("gdp_unemployment.png")
-```
-
+![](graphs/gdp_unemployment.png)  
+   
 <br>
 
+***
 #### The scatterplots visualizing the relationship between GDP per capita and the male and female OSSR showed that in countries with lower GDPs, they tend to have higher OOSRs for both females and males. 
 
-```{r, echo=FALSE}
-knitr::include_graphics("gdp_oosr_female.png")
-knitr::include_graphics("gdp_oosr_male.png")
-```
+![](graphs/gdp_oosr_female.png)  
+   
+![](graphs/gdp_oosr_male.png)  
 
 <br>
 
+***
 #### The scatterplot visualizing the relationship between GDP per capita and education gap (our added numerical varible) showed that in countries with lower GDPs, they tend to have a larger education gap. 
 
-```{r, echo=FALSE}
-knitr::include_graphics("gdp_education_gap.png")
-```
+![](graphs/gdp_education_gap.png)  
 
 <br>
 
+***
 #### The world map offers a geographical visualization on economic disparities and global economic distribution. Countries were visually categorized based on their economic status (GDP per capita). 
 
-```{r, echo=FALSE}
-knitr::include_graphics("gdp_map.png")
-```
-
+![](graphs/gdp_map.png)  
+   
 <br>
 
+*** 
 #### The summary table shows the medians of the key indicators across the GDP per capita categories, showing an overview of the economic and educational outcomes. Completion rates for both females and males are positively associated with higher GDP, shown by the higher medians in the High GDP category. The unemployment rate medians show that unemployment rates tend to decrease with rising GDP. The OOSR shows variations between GDP categories. The education gap is notable in low GDP countries, with a higher education gap in low GDP.
 
 ```{r, echo=FALSE}
