--- a/info201FINALWRITEUP.Rmd
+++ b/info201FINALWRITEUP.Rmd
@@ -162,12 +162,14 @@ date: "2023-12-07"
 
 *** 
 #### The summary table shows the medians of the key indicators across the GDP per capita categories, showing an overview of the economic and educational outcomes. Completion rates for both females and males are positively associated with higher GDP, shown by the higher medians in the High GDP category. The unemployment rate medians show that unemployment rates tend to decrease with rising GDP. The OOSR shows variations between GDP categories. The education gap is notable in low GDP countries, with a higher education gap in low GDP.
-
-```{r, echo=FALSE}
-summary_table <- read.csv("summary_table.csv")
-summary_table
-```
-
+  
+| Rank_of_GDP_per_Capita | Median_IMF | Median_Completion_Rate_Primary_Female | Median_Completion_Rate_Primary_Male | Median_Unemployment_Rate | Median_OOSR_Primary_Age_Male | Median_OOSR_Primary_Age_Female | Median_Education_Gap |
+|------------------------|------------|---------------------------------------|-------------------------------------|--------------------------|------------------------------|--------------------------------|----------------------|
+| Low                    | 611        | 40                                    | 46                                  | 4.43                     | 9                            | 6                              | 8                    |
+| Mid                    | 2519       | 73                                    | 68.5                                | 4.7                      | 2.5                          | 3                              | 2                    |
+| High                   | 10849      | 94                                    | 91                                  | 5.51                     | 2                            | 1                              | 0                    |
+| NA: Insufficient Data  | 48826      | 0                                     | 0                                   | 4.58                     | 1                            | 0                              | 0                    |
+  
 <br>
 
 ## Discussion
